# walk_risk

./: .dockerignore  .env.development  .env.example  .gitignore  AGENTS.md  AI_GUIDE_SYSTEM_SUMMARY.md  CLAUDE.md  Dockerfile  alembic.ini  api_server.py  buffett_mentor_scenario.md  docker-compose.yml  enhanced_mentor_demo.py  integrated_tutorial_demo.py  main.py  multi_mentor_demo.py  mvp_plan.md  ontology_demo.py  pyproject.toml  railway.json  readme.md  real_time_puzzle_demo.py  real_trading_auto_demo.py  real_trading_demo.py  render.yaml  risk_puzzle_auto_demo.py  risk_puzzle_demo.py  risks_advanced.md  risks_beginner.md  risks_intermediate.md  risks_legendary.md  test_auth_system.py  tutorial_auto_demo.py  tutorial_demo.py
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 3e3a6e0ef96b_initial_migration.py
docs/: DEPLOYMENT.md  api_contract.md  api_testing.md  development_log_2025_08_03.md  development_log_2025_08_03_integration.md  development_log_2025_09_30.md  development_log_2025_09_30_week2.md  development_log_2025_12_07.md  real_time_system_completion.md  roadmap_next_steps.md  week1_code_review.md
docs/game_design/: core_game_loop.md  mission_system.md
examples/: ai_guide_demo.py  pattern_game_demo.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_auth.py  test_players.py  test_portfolio.py  test_puzzles.py
walk_risk/: __init__.py
walk_risk/ai/: __init__.py  (+4 more)
web-ui/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
(+111 files in other folders)
