[project]
name = "walk-risk"
version = "0.1.0"
description = "Risk mastery game with real-world financial market integration"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0"
]

[project.scripts]
walk-risk = "walk_risk.ui.cli:cli"
